# elastic-objects-rs

./: .gitignore  Cargo.toml  README.md  plot_energy_bulk.ipynb  plot_energy_from_log.ipynb  plot_performance.ipynb  plot_performance_full.ipynb  plot_pressure.ipynb  presentation.ipynb
data/: .gitignore  log_energy_8x8_6x4_stacked.csv  performance_test.csv  performance_test_3obj_cpu.csv  performance_test_3obj_cpu_grid.csv  performance_test_3obj_cpu_multi_grid.csv  performance_test_3obj_cpu_multi_singlekernel_grid.csv  performance_test_3obj_cpu_multi_singlekernel_grid_300.csv  performance_test_3obj_cpu_noboundary.csv  performance_test_3obj_opencl_grid.csv  performance_test_3obj_opencl_grid_300.csv  performance_test_optimized.csv  pressure_one.csv  pressure_two.csv
doc/: .gitignore  avg.drawio  presentation.tex  raport.tex  streszczenie.txt
doc/code/: node.rs  simulate_multiple.rs  simulate_no_par.rs  simulate_single.rs  simulation.cl  simulation_types.cl  temperature.c  verlet.rs
doc/images/: connections.drawio  eight_nebiours.drawio  error_correction.drawio  four_nebiours.drawio  main_flow.drawio  neib_grid.drawio  next_step.drawio  object_shema.drawio  pressure_box.drawio
glsl/: basic_coloring.frag  connections.vert  fragment.frag  fragment.glsl  grid.vert  nodes.vert  rectangles.vert  vertex.glsl  vertex.vert
scenes/: .gitignore
src/: build_scene.rs  elastic_node.rs  energy.rs  graphics.rs  lib.rs  main.rs  node.rs  rendering.rs  simulation_cpu.rs  simulation_general.rs  simulation_gpu.rs  window.rs
src/kernels/: add copy.cl  add.cl  simulation.cl
(+32 files in other folders)
