[package]
name = "elastic-objects-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
glam = {version = "0.20.5", features = ["std", "fast-math"]}
glutin = "0.27.0"
glium = "0.30.2"
egui = "0.15.0"
egui_glium = "0.15.0"
rayon = "1.5.1"
csv = "1.1.6"
rust-gpu-tools = { version = "0.6.0", optional = true, features = ["opencl"] }

[features]
rust-gpu-tools = ["dep:rust-gpu-tools"]