[package]
name = "elastic-objects-rs"
version = "0.1.1"
edition = "2021"
rust-version = "1.60"
default-run = "simulation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
glam = {version = "0.20.5", features = ["std", "fast-math", "serde"]}
glutin = "0.27.0"
glium = "0.30.2"
egui = "0.15.0"
egui_glium = "0.15.0"
rayon = "1.5.1"
csv = "1.1.6"
serde = "1.0.136"
bincode = "1.3.3"
opencl3 = {version = "0.8.0", features = ["CL_VERSION_3_0"], optional = true}

[features]
default = ["opencl3"]
opencl3 = ["dep:opencl3"]

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "simulation"
path = "src/bin/main.rs"

[[bin]]
name = "generate_scenes"
path = "src/bin/generate_scenes.rs"

[[bin]]
name = "opencl"
path = "src/bin/opencl.rs"